# website-minifier

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
minifier/: __init__.py  __main__.py  _css.py  _html.py  _json.py  _xml.py
tests/: test_css_minification.py  test_html_minification.py  test_json_minification.py  test_xml_minification.py
